app/assets/stylesheets/custom.css
/*****************************************************************************************
 * Eric Meyer's Global CSS Reset
 * 
 * Including this because it's good to ensure
 * that browsers render the same things the same
 * way.
 * 
 * See http://meyerweb.com/eric/tools/css/reset/
 ****************************************************************************************/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*****************************************************************************************
 * Main Styles
 ****************************************************************************************/
.container {
  padding-top: 5px;
  width: 710px;
}

body {
  background: #eaefea;
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 300;
  line-height: 1.5em; /* To improve legibility */
}

footer {
  padding-left: 5px;
  padding-right: 8px;
  position: relative;
  margin-top: -50px;
  height: 50px;
  clear: both;
}

#wrapper {
  min-height: 100%;
}

#main {
  overflow: auto;
  padding: 0 10px;
  padding-bottom: 50px;
}

header {
  height: 60px;
  line-height: 30px;
}

header img {
  display: none;
  padding: 0.8em;
  background: #fff;
}

#subheader {
  /* <Awesome gradient-style action> */
  background: #9f9f9f; /* Old browsers */
  background: -moz-linear-gradient(top,  #9f9f9f 0%, #c3c3c3 20%, #ccc 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9f9f9f), color-stop(20%,#c3c3c3), color-stop(100%,#ccc)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #9f9f9f 0%,#c3c3c3 20%,#ccc 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #9f9f9f 0%,#c3c3c3 20%,#ccc 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #9f9f9f 0%,#c3c3c3 20%,#ccc 100%); /* IE10+ */
  background: linear-gradient(top,  #9f9f9f 0%,#c3c3c3 20%,#ccc 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9f9f9f', endColorstr='#ccc',GradientType=0 ); /* IE6-9 */
  /* </Awesome gradient-style action> */
  font-size: 0.8em;
}

/*****************************************************************************************
 * Header Levels 
 ****************************************************************************************/

h1, h2, h3, h4, h5, h6 {
  font-weight: 600;
  padding: 1em 0 1em 0;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.6em;
}

h3 {
  font-size: 1.4em;
}

h4 {
  font-size: 1.2em;
}

/*****************************************************************************************
 * Links 
 ****************************************************************************************/

a:link {
  color: #09c;
  text-decoration: none;
}

a:visited {
  color: #09c;
}

a:hover {
  color: #069;
  text-decoration: underline;
}

/* Header Nav links */

header nav ul li a:link {
  display: block;
  padding: 0 5px;
  color: #ccc;
}

header nav li a:visited {
  color: #ccc;
}

header nav li a:hover {
  color: #000;
  background-color: #999;
  text-decoration: none;
} 

header nav ul#subheader a:link {
  color: #000;
} 

header nav ul#subheader a:visited {
  color: #000;
}

/*****************************************************************************************
 * Navigation 
 ****************************************************************************************/
header nav {
  position: fixed;
  white-space: nowrap;
  /* Lovely box shadows! */
  -moz-box-shadow: 0px 1px 5px #999;
  -webkit-box-shadow: 0px 1px 5px #999;
  box-shadow: 0px 1px 5px #999;
}

header>nav {
  background-color: #333;
  width: 100%;
}

nav ul {
  text-align: right;
  margin: 0;
  padding: 0;
}

nav ul li {
  list-style-type: none;
  display: inline-block;
  padding: 0;
}

/*****************************************************************************************
 * Alerts
 ****************************************************************************************/

#alert_num {
  margin: 4px auto;
  line-height: 22px;
  font-weight: 700;
  min-width: 15px;
  text-align: center;
  color: #09c;
  background-color: #555;
}

#alert_num:link, #alert_num:visited {
  color: #fff;
}

#alert_num:hover, #alert_num.alert_bad:hover {
  background-color: #ccc;
}

#alert_num.show, #alert_num.alert_bad.show {
  background-color: transparent;
}

#alert_num.show:link, #alert_num.show:visited {
  color: #333;
}

#alert_num.alert_bad {
  background-color: #900;
}

/* For the parent li of #alert_num */
li.show {
  background-color: #fff;
}

#alerts {
  display: none; /* By default, hide the alerts. They'll be displayed through javascript. */
  position: fixed;
  right: 20px;
  top: 30px;
  background-color: #fff;
  z-index: 100;
  padding: 0.5em;
  min-width: 300px;
  min-height: 25px;
  /* Lovely box shadows! */
  -moz-box-shadow: 1px 3px 3px #ccc;
  -webkit-box-shadow: 1px 3px 3px #ccc;
  box-shadow: 1px 3px 3px #ccc;
}

#alerts.show {
  display: block;
}

#not-alerts { /* This allows us to hide the alerts menu when other parts of the page are clicked */
  background: transparent;
  display: none;
  z-index: 99;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

#not-alerts.show {
  display: block;
}

/*****************************************************************************************
 * Reusable Styles
 ****************************************************************************************/

section {
  margin-top: 1em;
  font-size: 120%;
  padding: 20px;
  background: #fff;
}

section h1 { 
  font-size: 200%;
}

/* Round the corners on the boxes! */
.round {
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
}

.round-small {
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
}


/*****************************************************************************************
 * Metric/Msrun Data Tables 
 ****************************************************************************************/
table#metric_out {
  border: 4px groove black;
  font-size: 0.8em;
}

td .sort {
  padding-right: 19px;
  background-repeat: no-repeat;
  background-position: right center;
}

td .asc {
  background-image: url(/images/down_arrow.png);
}

td .desc {
  background-image: url(/images/up_arrow.png);
}

table {
  border-collapse: collapse;
}

div#messages span {
  color:blue;
  font-weight: bold;
}

.js-button {
  /* Display a cursor, so it's a button. */
  cursor: pointer;
  padding-left: 25px;
  line-height: 24px;
  text-align: left;
}

.js-button:hover {
  background-color: #f9f9f9;
}

.add {
  background: transparent url(/images/add.png) left center no-repeat;
}

.remove {
  background: transparent url(/images/remove.png) left center no-repeat;
}

.filter {
  background: transparent url (/images/filter.png) left center no-repeat;
}

thead {
  border-bottom: 2px solid #000;
}

thead th {
  background-color: #ccc;
  padding: .25em .75em;
  border: none;
}

tr:nth-child(2n) {
  background-color: #ddd;
}

td.lists {
  font-size: 10px;
}

th, td {
  padding: 4px 6px;
}

ul.categories li {
  display: inline-block;
}

ul.categories li:hover {
  background-color: #fff;
}

ul.categories li a {
  display: block;
  width: 100%;
  height: 100%;
  padding: 5px;
}

/*****************************************************************************************
 * Graphs Styles
 ****************************************************************************************/
#graphs>div.svg> div.bean {
  width: 540px;
  height: 216px;
}
#graphs>div.svg> div.time {
  width: 540px;
  height: 216px;
  float: left
}

#graphs>div.hplcgraph {
  width: 920pt;
}

#graphs>div.svg { 
  height: 300px;
}

#legends>div.colors p.first_description {
  font-weight: bold;
  color: #00688B;
}

#legends>div.colors p.second_description {
  font-weight: bold;
  color: #B22222;
}

div.legend {
  text-align: left;
  float: left;
  height: 248px; /* 248 to the bottom of the p-value text, 268 to fill the space, 208 to align with the graphs */
  min-width: 150px;
  background-color: #ddd;
  margin: 8px;
  padding: 8px;
  margin-bottom: 18px;
}

div.legend h5 {
  margin-top: 0;
  border-bottom: 1px solid #999;
}

div.legend .box {
  border: 1px solid #000;
  display: inline-block;
  width: 15px;
  height: 15px;
  margin: 5px;
  clear: both;
  float: left;
}

div.legend .description {
  float: left;
  display: inline-block;
  line-height: 25px;
}

div.legend div.first-desc {
  background: #00688B;
}

div.legend div.second-desc {
  background: #B22222;
}

.arrow-container {
  height: 16px;
  width: 16px;
  margin: 5px;
  float: left;
  clear: left;
}

.trend {
  float: left;
  font-size: .8em;
  line-height: 26px;
}

table#metric_out tr.category {
  font-size: 1em;
  text-align: center;
  font-weight: bold;
}

table#metric_out tr.subcat {
  font-size: 0.9em;
  font-weight: bold;
}

